# rust-hello-game

./: Cargo.toml
src/: game.rs  lib.rs  main.rs  web.rs
static/: game.html
tests/: web_tests.rs
