[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2024"

[lib]
name = "hello_cargo"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
actix-web-actors = "4"
actix = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-rt = "2"
